Log more details of tests, and disable the 5 bad methods seen